--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/player.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/castle.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,9 +25,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/menu.tscn", "res://Scenes/principal.tscn", "res://Scenes/parte_2.tscn", "res://Scenes/player.tscn", "res://Scenes/killzone.tscn", "res://Scenes/slime.tscn", "res://Scenes/dagger.tscn", "res://Scenes/castle.tscn")
+open_scenes=PackedStringArray("res://Scenes/menu.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/principal.tscn", "res://Scenes/parte_2.tscn", "res://Scenes/player.tscn", "res://Scenes/slime.tscn", "res://Scenes/castle.tscn")
 current_scene="res://Scenes/parte_2.tscn"
-center_split_offset=-252
+center_split_offset=-330
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
