--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=228
+dock_hsplit_2=286
 dock_hsplit_3=-680
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,20 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/castle.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Props/ladder.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TileSets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Props/", "res://ExtraSprites/", "res://Characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/menu.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/principal.tscn", "res://Scenes/parte_2.tscn", "res://Scenes/player.tscn", "res://Scenes/slime.tscn", "res://Scenes/castle.tscn")
-current_scene="res://Scenes/parte_2.tscn"
+open_scenes=PackedStringArray("res://Scenes/UI/menu.tscn", "res://Scenes/UI/death_screen.tscn", "res://Scenes/Levels/world1.tscn", "res://Scenes/Levels/world2.tscn", "res://Scenes/Entities/player.tscn", "res://Scenes/Props/ladder.tscn")
+current_scene="res://Scenes/Levels/world2.tscn"
 center_split_offset=-330
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
