Añadido final al mundo 2 asi como una pantalla de victoria, añadido tambien unu nuevo tipo de enemigo pero falta su añadido especial

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,20 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Props/Ladder.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TileSets/", "res://Scripts/", "res://Scenes/", "res://Scenes/UI/", "res://Scenes/Props/", "res://Scenes/Levels/", "res://Scenes/Entities/", "res://ExtraSprites/", "res://Characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Entities/slime_shooter.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TileSets/", "res://Scenes/", "res://Scenes/UI/", "res://Scenes/Props/", "res://Scenes/Levels/", "res://Scenes/Entities/", "res://ExtraSprites/", "res://Characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UI/menu.tscn", "res://Scenes/UI/death_screen.tscn", "res://Scenes/Levels/world1.tscn", "res://Scenes/Levels/world2.tscn", "res://Scenes/Entities/player.tscn", "res://Scenes/Props/Ladder.tscn")
-current_scene="res://Scenes/Props/Ladder.tscn"
+open_scenes=PackedStringArray("res://Scenes/UI/menu.tscn", "res://Scenes/UI/death_screen.tscn", "res://Scenes/UI/win_screen.tscn", "res://Scenes/Levels/world1.tscn", "res://Scenes/Levels/world2.tscn", "res://Scenes/Entities/slime_shooter.tscn", "res://Scenes/Entities/slime.tscn")
+current_scene="res://Scenes/Levels/world1.tscn"
 center_split_offset=-330
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
 
 [ScriptEditor]
 
