--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,11 +25,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UI/menu.tscn", "res://Scenes/UI/death_screen.tscn", "res://Scenes/UI/win_screen.tscn", "res://Scenes/Levels/world1.tscn", "res://Scenes/Levels/world2.tscn", "res://Scenes/Entities/slime_shooter.tscn", "res://Scenes/Entities/slime.tscn")
-current_scene="res://Scenes/Levels/world1.tscn"
+open_scenes=PackedStringArray("res://Scenes/UI/menu.tscn", "res://Scenes/UI/death_screen.tscn", "res://Scenes/UI/win_screen.tscn", "res://Scenes/Levels/world1.tscn", "res://Scenes/Levels/world2.tscn", "res://Scenes/Entities/slime_shooter.tscn")
+current_scene="res://Scenes/Entities/slime_shooter.tscn"
 center_split_offset=-330
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
